kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-app
  labels:
    app.kubernetes.io/name: platform-app
    environment: dev
