kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  namespace: platform-app
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: platform-app

  ports:
    - name: http
      port: 80
      targetPort: http
